wiki/content/specifications/vec/v220/classes/slotmapping.md
---
title: SlotMapping
toc: false
type: specs
date: "2025-09-19"
draft: false
specification: VEC
version: 2.2.0
documentType: "Recommendation"
elementType: Class
classes:
  - SlotMapping
menu_name: vec-2.2.0
---
<p>Defines the mapping of two slots contained PartVersion A &amp; B of the containing Mapping-object. </p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | mapping |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [ExtendableElement]({{< relref "extendableelement.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|identificationA| [String]({{< relref "string.md" >}}) | 1 | <p>The identification of the Slot on side A </p> | [SlotMapping]({{< relref "slotmapping.md" >}}) |
|identificationB| [String]({{< relref "string.md" >}}) | 1 | <p>The identification of the Slot on side B </p> | [SlotMapping]({{< relref "slotmapping.md" >}}) |
|layoutIdentificationA| [String]({{< relref "string.md" >}}) | 0..1 | <p> The identification of a ModularSlotLayout, if the Slot on side A refers to a <i>ModularSlot.</i>      </p> | [SlotMapping]({{< relref "slotmapping.md" >}}) |
|layoutIdentificationB| [String]({{< relref "string.md" >}}) | 0..1 | <p> The identification of a ModularSlotLayout, if the Slot on side B refers to a <i>ModularSlot.</i>      </p> | [SlotMapping]({{< relref "slotmapping.md" >}}) |

## Outgoing Relations
<table>
    <thead>
        <tr>
           <th colspan="6">Other End</th>
           <th colspan="1">This End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>cavityMapping</td>
        <td><a href="{{< relref "cavitymapping.md" >}}">CavityMapping</a></td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td>1</td>
        <td></td>
    </tr>
    </tbody>
</table>

##  Incoming Relations
<table>
    <thead>
        <tr>
           <th colspan="5">This End</th>
           <th colspan="2">Other End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>slotMapping</td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "mapping.md" >}}">Mapping</a></td>
        <td>1</td>
        <td></td>
    </tr>
    </tbody>
</table>



